--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -5,6 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>InterFLow Privacy Policy</title>
     <style>
+        .language-nav {
+            text-align: center;
+            margin: 20px 0 40px;
+        }
+        .language-nav a {
+            margin: 0 10px;
+            color: #2c3e50;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .language-nav a:hover {
+            text-decoration: underline;
+        }
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
             line-height: 1.6;
@@ -41,7 +54,12 @@
     </style>
 </head>
 <body>
-    <h1>InterFLow Privacy Policy</h1>
+    <div class="language-nav">
+        <a href="#english">English</a>
+        <a href="#chinese">中文</a>
+        <a href="#japanese">日本語</a>
+    </div>
+    <h1 id="english">InterFLow Privacy Policy</h1>
     <p class="last-updated">Last Updated: June 2025</p>
 
     <h2>1. Introduction</h2>
@@ -84,7 +102,7 @@
 
     <h2>7. Contact Us</h2>
     <p>If you have any questions or suggestions regarding this privacy policy, please contact us at:</p>
-    <p>Email: govomusic@gmail.comp</p>
+    <p>Email: govomusic@gmail.com</p>
 
     <p style="margin-top: 40px; text-align: center; color: #666;">
         © 2025 InterFLow. All rights reserved.
@@ -92,7 +110,7 @@
 
     <hr style="margin: 50px 0; border: none; border-top: 2px solid #eee;">
 
-    <h1>InterFLow 隐私政策</h1>
+    <h1 id="chinese">InterFLow 隐私政策</h1>
     <p class="last-updated">最后更新时间：2025年6月</p>
 
     <h2>1. 简介</h2>
@@ -135,10 +153,61 @@
 
     <h2>7. 联系我们</h2>
     <p>如果您对本隐私政策有任何疑问或建议，请通过以下方式联系我们：</p>
-    <p>邮箱：govomusic@gmail.comp</p>
+    <p>邮箱：govomusic@gmail.com</p>
+
+    <p style="margin-top: 40px; text-align: center; color: #666;">
+        © 2025 InterFLow. All rights reserved.
+    </p>
+
+    <hr style="margin: 50px 0; border: none; border-top: 2px solid #eee;">
+
+    <h1 id="japanese">InterFLow プライバシーポリシー</h1>
+    <p class="last-updated">最終更新日: 2025年6月</p>
+
+    <h2>1. はじめに</h2>
+    <p>InterFLowは、ユーザーの学習効率向上に焦点を当てたアプリケーションです。私たちはあなたのプライバシーとデータセキュリティを非常に重視しています。このプライバシーポリシーは、私たちがどのように個人情報を収集、使用、保護するかを説明するものです。</p>
+
+    <h2>2. データ収集</h2>
+    <p>InterFLowは以下の必要な情報のみを収集します:</p>
+    <ul>
+        <li>あなたが作成したタスク内容</li>
+        <li>タスクの完了状況</li>
+        <li>タスクの種類分類</li>
+    </ul>
+
+    <h2>3. データ保存</h2>
+    <p>すべてのデータはあなたのデバイスにローカルで保存され、私たちはあなたのデータをいかなるサーバーにもアップロードしません。これは以下のことを意味します:</p>
+    <ul>
+        <li>すべてのデータはあなたのデバイスに保存されます</li>
+        <li>私たちはあなたの個人情報を収集・保存しません</li>
+        <li>あなたのデータは第三者と共有されません</li>
+    </ul>
+
+    <h2>4. データセキュリティ</h2>
+    <p>すべてのデータがローカルに保存されるため、データセキュリティは主にあなたのデバイスのセキュリティに依存します。私たちは以下を推奨します:</p>
+    <ul>
+        <li>デバイスデータを定期的にバックアップする</li>
+        <li>デバイスに適切なアクセス保護を設定する</li>
+        <li>最新のセキュリティアップデートを受けるためアプリケーションを更新する</li>
+    </ul>
+
+    <h2>5. あなたの権利</h2>
+    <p>ユーザーとして、あなたは以下の権利を持っています:</p>
+    <ul>
+        <li>いつでもアプリケーションとそのすべてのデータを削除できます</li>
+        <li>タスクデータをエクスポートできます（アプリケーションがこの機能を提供している場合）</li>
+        <li>作成したタスクをいつでも修正または削除できます</li>
+    </ul>
+
+    <h2>6. プライバシーポリシーの更新</h2>
+    <p>私たちはこのプライバシーポリシーを随時更新する場合があります。重要な変更がある場合、アプリケーション内であなたに通知します。</p>
+
+    <h2>7. お問い合わせ</h2>
+    <p>このプライバシーポリシーに関するご質問やご意見がございましたら、以下の方法でお問い合わせください:</p>
+    <p>メール: govomusic@gmail.com</p>
 
     <p style="margin-top: 40px; text-align: center; color: #666;">
         © 2025 InterFLow. All rights reserved.
     </p>
 </body>
-</html> 
+</html>
